[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwasm-htj2k"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version", "description"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Environment :: WebAssembly",
  "Environment :: WebAssembly :: Emscripten",
  "Environment :: WebAssembly :: WASI",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
keywords = [
  "itkwasm",
  "webassembly",
  "wasi",
  "emscripten",
]

requires-python = ">=3.7"
dependencies = [
    "itkwasm >= 1.0.b131",
    "itkwasm-htj2k-wasi; sys_platform != \"emscripten\"",
    "itkwasm-htj2k-emscripten; sys_platform == \"emscripten\"",

]

[tool.hatch.version]
path = "itkwasm_htj2k/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-pyodide",
  "itk-webassemblyinterface >= 1.0.b127",
  "itkwasm-compare-images",
]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/ITKIOOpenJPH"
Source = "https://github.com/InsightSoftwareConsortium/ITKIOOpenJPH"

[tool.hatch.envs.default.scripts]
test = [
  "hatch build -t wheel",
  "pytest --dist-dir=./dist --rt=chrome",
]
download-pyodide = [
  "curl -L https://github.com/pyodide/pyodide/releases/download/0.23.1/pyodide-0.23.1.tar.bz2 -o pyodide.tar.bz2",
  "tar xjf pyodide.tar.bz2",
  "rm -rf dist pyodide.tar.bz2",
  "mv pyodide dist",
]


[tool.hatch.build]
exclude = [
  "/examples",
]
